assets/css/style.css
/* ... */
.book-card {
    grid-column: span 2;
    display: flex;
    flex-direction: column;
    background-color: var(--bg-light);
    box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
    padding: 2.5rem;
    text-align: center;
    height: fit-content;
    align-items: center;
    margin-bottom: 1.5rem;
}

.book-card a {
    text-decoration: none;
    color: var(--clr--light-700);
}

.book-card a:visited {
    text-decoration: none;
    color: var(--clr--light-700);
}

.book-card h2,
.book-card p {
    padding: 1rem;
}

.book-card h2 {
    font-size: var(--fs-900);
}

.authors {
    font-size: var(--fs-400);
}

.pub-sec-1 {
    grid-row: 1/2;
}

.pub_img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Contact Page Styling */

.contact {
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
    align-items: center;
    font-family: var(--ff-prim);
    background-size: cover;
    background-position: center;
    width: min(95%, 100rem);
    padding: .5rem;
    margin-inline: auto;
    gap: 1.5rem;
}

.form-wrapper {
    padding: 2.5rem;
    box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);
}

.contact-form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 1rem;
    width: min(95%, 70rem);
    margin-inline: auto;

}

.contact-form label {
    display: block;
}

.contact form .full {
    grid-column: 1/3
}

.aside-message {
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
    padding: 1em;
    background-color: var(--bg-dark);
}

.aside-message h2 {
    color: var(--clr--light-700);
}

.aside-message p {
    color: var(--clr--light-700);
}

.contact-form>h2 {
    font-size: var(--fs-700);
    margin-bottom: 1.5rem;
}

.text_input {
    color: var(--clr--prim-700);
    width: 100%;
    height: 1.5rem;
    margin: .25em 0 1.5em;
    border: 1px solid rgba(32, 44, 57, 1)
}

.submit-button {
    display: inline-block;
    background: var(--bg-dark);
    color: var(--clr--light-500);
    text-transform: uppercase;
    text-decoration: none;
    padding: 1em;
    font-family: var(--ff-prim);
    font-weight: var(--fw-700);
    letter-spacing: .15rem;
    margin-top: 2.5rem;

}

.submit-button:hover {
    background: var(--clr--sec-700);
    color: var(--clr--light-700);
}

/* Thank you page styling */

.thank_you {
    display: flex;
    background-color: var(--bg-dark);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 80vh;
}

.thank_you h2 {
    color: var(--clr--light-900);
}

/* == 3.6 footer styling == */
.footer {
    height: fit-content;
    background-color: var(--bg-dark);
}

.socials {
    list-style: none;
    text-align: center;
    padding: 0;
    margin: 0;
}

.socials li {
    display: inline;
}

.socials i {
    font-size: 120%;
    margin: 0;
    padding: 5% 5%;
    color: var(--clr--light-700);
}

.socials i:hover {
    color: var(--clr--sec-700);
}

/* Footer Navigation Menu */

.ft-nav {

    background-color: var(--bg-dark);
    grid-column: 3/4;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--clr--light-700);
    opacity: 1;
    /* Add Legacy Browser support */
    position: relative;
    text-align: center;
    transition: none;
    transform: scale(1, 1);
    background: none;
    top: initial;
    left: initial;
    /* end Legacy Browser support */
}

.ft-nav a {
    color: var(--clr--light-700);
    font-family: var(--ff-prim);
    text-decoration: none;
    font-size: 1rem;
    text-transform: uppercase;
    opacity: 1;
    transition: opacity 150ms ease-in-out;
}

.ft-list {
    text-align: center;
}

/*  =============
    4. utilities 
    ============= */

/* == 4.1 buttons ==  */

/* hero explore button */
.exp-btn {
    display: inline-block;
    background: var(--clr--light-900);
    color: var(--clr-prim-700);
    text-transform: uppercase;
    text-decoration: none;
    padding: 1em 2.5em;
    font-family: var(--ff-prim);
    font-weight: var(--fw-700);
    letter-spacing: .15rem;
    margin-top: 2.5rem;
}

.exp-btn:hover {
    background-color: var(--bg-mid);
    color: var(--clr--light-500);
}

/* card button */

.card-btn {
    display: inline-block;
    background: var(--bg-dark);
    color: var(--clr--light-500);
    text-transform: uppercase;
    text-decoration: none;
    padding: 1em;
    font-family: var(--ff-prim);
    font-weight: var(--fw-700);
    letter-spacing: .15rem;


}

.card-btn:hover {
    background-color: var(--bg-mid);
    color: var(--clr--light-500);
}

/* Gallery Lightbox Button */

.gal-btn {
    display: block;
    background: var(--bg-mid);
    color: var(--clr--light-500);
    text-transform: uppercase;
    text-decoration: none;
    padding: 1em;
    font-family: var(--ff-prim);
    font-weight: var(--fw-700);
    letter-spacing: .15rem;
}

.gal-btn:hover {
    background-color: var(--clr-prim-500);
    color: var(--clr--light-500);
}

/* Page Topper */

.top-hero-outer {
    display: flex;
    width: 100vw;
    height: 25vh;
    overflow: hidden;
    align-items: center;
    background-color: var(--bg-dark);
    margin-bottom: 1rem;
}


.top_title {
    position: absolute;
    text-align: center;
    text-transform: uppercase;
    left: 50%;
    transform: translateX(-50%);
    scroll-snap-align: center;


}

.top_title h1 {
    font-size: clamp(.65rem, 1rem + 10vw, 1.5rem);
    /* display: inline-block; */
    color: var(--clr--light-900);
    text-shadow: 2px 2px var(--clr--sec-700);
}


/* == card hover effect ==  */

.card {
    position: relative;
    background: var(--clr--sec-700);
    box-shadow: .5em .5em 3.5em rgba(32, 44, 57, .25);

}

.card:hover::before {
    transform: scale(1, 1);
}

.card__img {
    max-width: 100%;
    display: block;
    transition: opacity ease-out 250ms;
    opacity: 1;
}

.card__img:hover {
    opacity: 0.4;
}

.card:hover {
    opacity: 1;
}
/* ... */

